<resources>
    <string name="app_name">Fortalece Nayarit</string>

    <string name="login_field_iniciar_titulo">Iniciar Sesión</string>
    <string name="login_field_correo_hint">Correo Electrónico</string>
    <string name="login_field_contra_hint">Contraseña</string>
    <string name="login_field_boton_entrar">Entrar</string>
    <string name="login_field_boton_contraseña_olvidada">¿Olvidaste tu contraseña?</string>
    <string name="login_field_texto_cuentanueva">¿No tienes cuenta?</string>
    <string name="login_field_boton_registro">Regístrate aquí</string>
    <string name="login_field_boton_saltar">Saltar ></string>
    <string name="login_success">Sesión iniciada correctamente!</string>
    <string name="login_contramenu">Recuperar contraseña</string>
    <string name="iniOKLogin">Inicio de sesión exitoso</string>
    //Errores marcados en actividad login//
    <string name="login_error_correo_vacio">El campo de correo no puede ir vacío</string>
    <string name="login_error_contra_vacia">El campo de contraseña no puede ir vacío</string>
    <string name="login_error_login">Verifica tu Usuario ,contraseña y conexión a internet</string>


    <string name="register_field_registro_titulo">Registro</string>
    <string name="register_toolbar_titulo">Registro</string>
    <string name="register_field_nombre_hint">Nombre completo</string>
    <string name="register_field_correo_hint">Correo Electrónico</string>
    <string name="register_field_contra_hint">Contraseña</string>
    <string name="register_field_boton_entrar">Entrar</string>
    <string name="register_field_boton_saltar">Saltar ></string>
    <string name="register_success">Sesión creada correctamente!</string>
    <string name="iniOKRegistro">¡Cuenta creada exitosamente! Inicio de sesión automático</string>
    //Errores marcados en actividad register//
    <string name="register_error_nombre_vacio">El campo de nombre completo no puede ir vacío</string>
    <string name="register_error_correo_vacio">Introduce un correo electronico válido</string>
    <string name="register_error_contra_vacia">El campo de contraseña no puede ir vacío</string>
    <string name="register_error_register">Verifica tu Usuario ,contraseña y conexión a internet</string>


    <string name="nav_title_noticias">Noticias</string>
    <string name="nav_title_empleo">Ofertas de empleo</string>
    <string name="nav_title_resuelve">Resuelve</string>
    <string name="nav_title_contacto">Contacto</string>
    <string name="nav_title_cerrar_sesion">Cerrar sesión</string>
    <string name="nav_title_settings">Settings</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="item_job_vacancies_boton_info">Más información</string>

    <string name="frag_title_contacts">Contactos</string>
    <string name="frag_title_news">Noticias</string>
    <string name="frag_title_jobs">Ofertas de empleo</string>

    <string name="chat_user">Staff</string>
    <string name="chat_obteniendogaleria">Cargando tus archivos...</string>

    <string name="enviar_ubi">Enviar esta ubicación</string>

    <string name="button_newsdetail">Siguiente    </string>
    <string name="bottomsheet_jobsdetail">Si estás interesado, enviar C.V. al correo</string>

    <string name="msgs_nohay">¿Tienes alguna solicitud, gestión, denuncia o sugerencia?\n¡Envíanos un mensaje!\nY a la brevedad alguien del staff te contestará personalmente </string>
    <string name="news_nohay">Sin noticias por el momento.</string>
    <string name="jobs_nohay">Sin ofertas de empleo por el momento.</string>
    <string name="title_appinfo">Fortalece Nayarit APP</string>

    <string name="ServicesLink">http://setraprodesvc.iog.digital/api/</string>
    <string name="sharedPrefName">SharedPrefFortaleceNayarit</string>

    <string name="geo_APIKEY">AIzaSyCOxgEqyez3W-qhCyE5aMlbMFl5c86aOOI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
