<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:id="@+id/menu_navegacion">
        <item
            android:id="@+id/nav_noticias"
            android:title="@string/nav_title_noticias"/>

        <item
            android:id="@+id/nav_ofertas_empleo"
            android:title="@string/nav_title_empleo"/>

        <item
            android:id="@+id/nav_resuelve"
            android:title="@string/nav_title_resuelve"/>

        <item
            android:id="@+id/nav_contacto"
            android:title="@string/nav_title_contacto"/>
        <item
        android:id="@+id/nav_cerrar_sesion"
        android:title="@string/nav_title_cerrar_sesion"/>
    </group>
    <group android:id="@+id/menu_navegacion_footer">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="" />
    </group>

</menu>