<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true"
    tools:context=".presentationlayer.fragments.ChatFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimaryDark"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/msgNoHay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:text="@string/msgs_nohay"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textColorPrimary"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/switchChatLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Space
                    android:layout_width="@dimen/activity_horizontal_margin"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/buttonChat_staff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/switchButtonStaffImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_avatar_icon" />

                    <TextView
                        android:id="@+id/textStaff"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chat_user"
                        android:textAppearance="?android:textAppearanceSmall" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/switchSeparator"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/switchChatLayout"
                android:layout_marginBottom="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccent" />

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/chatSwipeRefreshLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/switchSeparator">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/msgRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </android.support.v4.widget.SwipeRefreshLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="false"
            android:clipToPadding="false"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_sendMessage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:animateLayoutChanges="true"
                android:scaleType="center"
                android:src="@drawable/ic_send_material"
                android:tint="#FFF" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:layout_toStartOf="@id/fab_sendMessage"
                android:layout_weight="1"
                android:animateLayoutChanges="false"
                android:gravity="center_vertical">

                <ImageView
                    android:id="@+id/buttonLocation"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_place"
                    android:tint="@color/colorAccent" />

                <ImageView
                    android:id="@+id/buttonImage"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:padding="8dp"
                    android:src="@drawable/ic_image"
                    android:tint="@color/colorAccent" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:animateLayoutChanges="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tituloAccion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/enviar_ubi"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/textColorPrimary"
                        android:textStyle="bold"
                        android:visibility="visible" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardMensaje"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_margin="10dp"
                        android:animateLayoutChanges="true"
                        android:visibility="visible"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="4dp">

                        <propulsar.pgb.presentationlayer.CustomViews.EditTextCampo
                            android:id="@+id/editText_mensaje"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:background="#FAFAFA"
                            android:inputType="textMultiLine|textCapSentences"
                            android:maxLines="4"
                            android:padding="5dp"
                            android:scrollbars="vertical" />
                    </android.support.v7.widget.CardView>
                </RelativeLayout>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/fab_sendMessage"
                android:layout_alignEnd="@id/fab_sendMessage"
                android:layout_alignStart="@id/fab_sendMessage"
                android:layout_alignTop="@id/fab_sendMessage"
                android:layout_margin="10dp"
                android:animateLayoutChanges="true"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mapContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                class="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/galleryContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone">

            <GridView xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnWidth="130dp"
                android:gravity="center"
                android:horizontalSpacing="2dp"
                android:numColumns="auto_fit"
                android:scrollbarSize="5dp"
                android:scrollbars="vertical"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp" />

            <RelativeLayout
                android:id="@+id/progressGalleryLoading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/chat_obteniendogaleria"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:textColor="@color/textColorPrimary" />

                    <ProgressBar
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_camera"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="15dp"
                android:layout_marginEnd="15dp"
                android:animateLayoutChanges="true"
                android:scaleType="center"
                android:src="@drawable/ic_photo"
                android:tint="#FFF" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_gallery"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_marginStart="15dp"
                android:animateLayoutChanges="true"
                android:scaleType="center"
                android:src="@drawable/ic_collections"
                android:tint="#FFF" />
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
